fix issue with images site-wide not stretching

--- a/src/styles/inc/_media.styl
+++ b/src/styles/inc/_media.styl
@@ -8,8 +8,9 @@
 
 img
 video
-  max-width: 100%
+  max-width 100%
   height auto
+  width 100%
 
 .embed-container:not(.type-rich)
   position: relative
